[package]
name = "dotlock"
version = "0.5.0"
authors = ["Bruce Guenter <bruce@untroubled.org>"]
license = "Unlicense"
description = "Create .lock files atomically on any filesystem."
homepage = "https://github.com/bruceg/dotlock"
repository = "https://github.com/bruceg/dotlock"

[badges]
travis-ci = { repository = "bruceg/dotlock" }

[dependencies]
tempfile = "3"

[dev-dependencies]
structopt = { version = "0.2", default-features = false }
